{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 9,
  "lineage": "183ae91a-abf6-a439-93cd-c5a652206968",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-im-alive-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ab5c06d902436b8e",
            "domain": "vpc",
            "id": "eipalloc-0dcccb33ca3fbb847",
            "instance": "i-03a4ac5408416b846",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09771d16fec88f3f4",
            "private_dns": "ip-10-0-57-141.us-east-2.compute.internal",
            "private_ip": "10.0.57.141",
            "public_dns": "ec2-18-118-77-82.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.77.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.centos",
            "aws_security_group.ingress-all-im-alive",
            "aws_subnet.subnet-uno",
            "aws_vpc.im-alive",
            "data.aws_ami.centos-last"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "centos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e36b7901e884a10",
            "arn": "arn:aws:ec2:us-east-2:248511779111:instance/i-03a4ac5408416b846",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a4ac5408416b846",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "klika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09771d16fec88f3f4",
            "private_dns": "ip-10-0-57-141.us-east-2.compute.internal",
            "private_ip": "10.0.57.141",
            "public_dns": "ec2-18-116-60-197.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.60.197",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f09b13c30c84e24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f36e0820cecea940"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7258bb08e795989",
            "tags": {
              "Name": "Im alive baby"
            },
            "tags_all": {
              "Name": "Im alive baby"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f36e0820cecea940"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-im-alive",
            "aws_subnet.subnet-uno",
            "aws_vpc.im-alive",
            "data.aws_ami.centos-last"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "im-alive-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248511779111:internet-gateway/igw-04a30806bd83d3258",
            "id": "igw-04a30806bd83d3258",
            "owner_id": "248511779111",
            "tags": {
              "Name": "im-alive-env-gw"
            },
            "tags_all": {
              "Name": "im-alive-env-gw"
            },
            "vpc_id": "vpc-04c761e4a67df326c"
          },
          "dependencies": [
            "aws_vpc.im-alive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-im-alive-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248511779111:route-table/rtb-0ce994febf3f5c825",
            "id": "rtb-0ce994febf3f5c825",
            "owner_id": "248511779111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a30806bd83d3258",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "im-alive-env-route-table"
            },
            "tags_all": {
              "Name": "im-alive-env-route-table"
            },
            "vpc_id": "vpc-04c761e4a67df326c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.im-alive-env-gw",
            "aws_vpc.im-alive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04036e52037e0fc60",
            "route_table_id": "rtb-0ce994febf3f5c825",
            "subnet_id": "subnet-0b7258bb08e795989"
          },
          "dependencies": [
            "aws_internet_gateway.im-alive-env-gw",
            "aws_route_table.route-table-im-alive-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.im-alive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-im-alive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248511779111:security-group/sg-0f36e0820cecea940",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f36e0820cecea940",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg-im-alive",
            "name_prefix": "",
            "owner_id": "248511779111",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c761e4a67df326c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.im-alive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248511779111:subnet/subnet-0b7258bb08e795989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0b7258bb08e795989",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248511779111",
            "vpc_id": "vpc-04c761e4a67df326c"
          },
          "dependencies": [
            "aws_vpc.im-alive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "im-alive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248511779111:vpc/vpc-04c761e4a67df326c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ebf04817c76ce5c",
            "default_route_table_id": "rtb-0617c9591ba2ef164",
            "default_security_group_id": "sg-0206a701c0f3e3e09",
            "dhcp_options_id": "dopt-52b03839",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c761e4a67df326c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0617c9591ba2ef164",
            "owner_id": "248511779111",
            "tags": {
              "Name": "im-alive-vpc"
            },
            "tags_all": {
              "Name": "im-alive-vpc"
            }
          }
        }
      ]
    }
  ]
}